--- a/note/纠错本.md
+++ b/note/纠错本.md
@@ -1,68 +1,6 @@
-#### 1.nodemon 启动时系统上禁止运行脚本的解决方法
+# 一、综合
 
-
-
->  ```js
->  set-ExecutionPolicy RemoteSigned
->  ```
-
-
-
-#### 2.Joi.validate is a not function解决办法
-
-
-
-最新版本对于一些API高版本会舍弃从而出现报错
-
-> 	npm uninstall joi
-
-重新下载一个老版本
-
-> ```js
-> npm install joi@14.3.1
-> ```
-
-
-
-#### 3.querystring内置模块丢弃的解决方法
-
-
-
-```js
-const querystringify = require('querystringify') //用这个第三方模块代替
-
-querystringify.parse()
-```
-
-```js
-name=%E6%9D%8E%E9%80%B5&password=111&age=18&email=1233%40ddd&hobbis=on&hobbis=on //键值对形式
-//上转下
-{
-  name: '李逵',
-  password: '111',
-  age: '18',
-  email: '1233@ddd',
-  hobbis: 'on'
-} //对象
-```
-
-
-
-#### 4.vscode中将.art文件识别为.html文件
-
-
-
-按**ctrl + shift + p** 
-
-<img src="E:\Typora笔记\images\Snipaste_2022-08-29_09-26-39.png" style="zoom:80%;" />
-
-<img src="E:\Typora笔记\images\Snipaste_2022-08-29_09-28-53.png" style="zoom: 80%;" />
-
-
-
-#### 5.谷歌浏览器中安装插件json format.crx无法安装的问题
-
-
+### 1.谷歌浏览器中安装插件json format.crx无法安装的问题
 
 ```js
 (1)打开谷歌浏览器插件配置地址：
@@ -77,95 +15,84 @@ name=%E6%9D%8E%E9%80%B5&password=111&age=18&email=1233%40ddd&hobbis=on&hobbis=on
 
 
 
-#### 6.解决安装包失败
+### 2.vscode中将.art文件识别为.html文件
+
+按**ctrl + shift + p** 
+
+<img src="E:\Typora笔记\images\Snipaste_2022-08-29_09-26-39.png" style="zoom:80%;" />
+
+<img src="E:\Typora笔记\images\Snipaste_2022-08-29_09-28-53.png" style="zoom: 80%;" />
 
 
 
-```js
- npm i axios --legacy-peer-deps //npm版本过高导致依赖冲突
+
+
+# 一、Git-Github
+
+### 1.Connection closed by 端口22 的报错问题
+
+```bash
+kex_exchange_identification: Connection closed by remote host
+Connection closed by 20.205.243.166 port 22
+fatal: Could not read from remote repository.
+ 
+Please make sure you have the correct access rights
+and the repository exists.
 ```
 
 
 
-####  7.form表单域
+解决办法：在 {用户}/.ssh/ 目录下建立config文本文档，输入以下代码，端口指向443即可。
 
-
-
-```js
-method//指定当前表单提交方式 
-
-action//指定当前表单提交的地址
+```
+Host github.com
+Hostname ssh.github.com
+Port 443
 ```
 
-普通表单和文件表单
-
-文件表单要已二进制传递，给form添加属性enctype="multipart/form-data"指定表单数据的编码类型，默认为application/x-www-from-urlencoded => name=zhangsan&agn=20，multipart/form-data 将表单数据编码成二进制类型
+重新测试连接`ssh -T git@github.com`
 
 
 
-#### 8.url内置模块
+# 二、网络
+
+### 1.响应状态码
+
+1. 200 OK：服务器成功返回请求的数据。
+2. 400 Bad Request：请求出现错误，服务器没有进行新建或修改数据的操作。
+3. 401 Unauthorized：表示用户没有权限（令牌、用户名、密码错误）。
+4. 403 Forbidden：表示用户得到授权（与401错误相对），但是访问是被禁止的。
+5. 404 Not Found：请求资源不存在，服务器没有找到请求的资源。
+6. 500 Internal Server Error：服务器发生错误，无法完成请求。
+7. 503 Service Unavailable：服务器当前无法处理请求，通常是因为服务器过载或停机维护。
 
 
 
-let { query , pathname } = url.parse(req.url, true);
-
-console.log(query.name)
-
-console.log(query.age)
-
-mime模块 
-
-mime.getType() 根据路径返回资源的类型
+# 三、Vue
 
 
 
-#### 9.post/get请求参数
 
 
+# 四、Node
 
-- 参数被放置在请求体中进行传输
-- 获取POST参数需要使用data事件和end事件
-- 使用querystringify内置模块将参数转换为对象格式
-
-
-
-在vue中封装一个请求数据的get方法
+### 1.node命令
 
 ```js
- methods: {
-    async initArticleList() {
-      const { data: res } = await request.get('/articles', { params: {} })
-    }
-  }
+npm cache clean --force; //清除缓存
+Vue.config.devtools = true; //解决vue调试工具devtools显示的问题
+npm list -g --depth 0; //查看自己安装了哪些全局包
+npm get prefix
+npm get cache
+npm config set prefix ""
+npm config set cache ""
+npm install -g cnpm --registry=https://registry.npm.taobao.org
+cat ~/.npmrc
 ```
 
 
 
-#### 10.获取地址栏中的信息
-
-
-
-  const { pathname, query } = url.parse(req.url, true)
-
-get请求拿到id
-
-http://127.0.0.1/modif?id=630b640f5daf08bd1e1b5418
-
-query.id = 630b640f5daf08bd1e1b5418
-
-pathname
-
-let user = await User.findOne({_id: query.id})
-
-
-
-user.hobbies.includes(item)
-
-
-
-#### 11.格式化时间
-
-
+### 2.格式化时间
 
 moment模块
 
@@ -185,164 +112,25 @@ template.defaults.imports.moment = moment; ////向模板内部导入moment变量
 
 
 
-get请求把请求参数放在地址栏中传递
-
-post请求把请求参数放在请求体中传递
-
-
-
-***
-
-
-
-密码加密bcrypt
-
-哈希加密是单程加密方式：1234 => abcd
-
-在加密的密码中加入随机字符串可以增加密码被破解的难度
-
-依赖环境
+### 3.解决安装包失败
 
 ```js
-python
-npm install -g node-gyp
-npm install --global --production windows-build-tools
-```
-
-```js
-async function createUser() {
-    const salt  = await bcrypt.genSalt(10)
-    const pass = await bcrypt.hash('123456', salt)
-    const user = await User.create({
-        username: 'itheima',
-        email: 'itheima@itcast.cn',
-        password: pass,
-        role: 'admin',
-        state: 0
-    });
-}
-createUser();
-```
-
-***
-
-
-
-#### 12.Joi
-
-
-
-javascript对象的规则描述语言和验证器
-
-```js
-async function run() {
-    try {
-        //实施验证
-        await Joi.validata({}, schema); //.then,.catch也可以
-    } catch (error) {
-        console.log(error.message);//ex.message返回的是error(new Error(''))中自定义的错误信息
-        return;
-    }
-    consloe.log('验证通过')
-}
-run()
+ npm i axios --legacy-peer-deps //npm版本过高导致依赖冲突
 ```
 
 
 
-#### 13.路由请求处理函数res,req方法
+### 4.nodemon 启动时系统上禁止运行脚本的解决方法
 
-
-
-接收普通表单数据
-
-```js
-const bodyParser = require('body-parser')
-//处理post请求参数
-app.use(bodyParser.urlencoded({extended: false}))
-//可以接收客户端表单域发送的数据
-req.body
-```
-
-接收二进制数据
-
-```js
-const formidable = require('formidable')
-
-//第一种方法不能保留文件后缀名
-//创建表单解析对象
-const form = new formidable.IncomingForm()
-//设置文件上传路径
-form.uploadDir = path.join(__dirname, '../', '../', 'public', 'uploads');
-//是否保留表单上传文件的扩展名
-form.options.keepExtensions=true
-//form.keepExtensions = true(丢弃)
-
-//对表单进行解析
-form.parse(req, (err, fields, files) => {
-    //err错误对象，如果表单解析失败 err里面存储错误信息，成功则是null
-    //fields存储普通请求参数
-    //files存储上传的文件信息
-})
-
-//第二种方法能保留文件后缀名
-const form = formidable({ multiples: true, uploadDir: path.join(__dirname, '../', '../', 'public', 'uploads'), keepExtensions: true })
+```bash
+set-ExecutionPolicy RemoteSigned
 ```
 
 
 
-#### 14.显示图片文件
+# 五、数据库
 
-```js
-var file = document.querySelector('#file'); // <input type="file" name="cover" id="file">
-var preview = document.querySelector('#preview'); //<img class="img-thumbnail" src="" id="preview">
-        //当用户选择完文件以后
-file.onchange = function () {
-     	//创建文件读取对象
-    	var reader = new FileReader();
-    	//用户选择文件列表，读取文件
-    	reader.readAsDataURL(this.files[0]);
-    	//监听onload事件
-    reader.onload = function() {
-    	//将文件读取的结果显示在页面中
-        preview.src = reader.result;
-    }
-}
-//在表单中添加 multiple 允许用户一次性选择多个文件
-```
-
-
-
-#### 15.分页模块mongoose-sex-page
-
-
-
-```js
-const pagination = require('mongoose-sex-page')
-
-//page 指定当前页 size 指定每页显示的数据条数 display 指定客户端要显示的页面数量 exec 向数据库中发送查询请求
-pagination(集合构造函数)..page(1).size(2).display(3).exec();
-```
-
-
-
-#### 16.node命令
-
-```js
-npm cache clean --force; //清除缓存
-Vue.config.devtools = true; //解决vue调试工具devtools显示的问题
-npm list -g --depth 0; //查看自己安装了哪些全局包
-npm get prefix
-npm get cache
-npm config set prefix ""
-npm config set cache ""
-npm install -g cnpm --registry=https://registry.npm.taobao.org
-cat ~/.npmrc
-```
-
-
-
-#### 17.MySQL建表
+### 1.MySQL建表
 
 > 一定要加character set utf8 collate utf8_bin engine innodb，否则加入中文会报错。
 
@@ -357,7 +145,7 @@ create table `user` (
 
 
 
-#### 18.JDBC连接数据库
+### 2.JDBC连接数据库
 
 > 路径中一定要加入?rewriteBatchedStatements=true&characterEncoding=UTF-8，否则dml添加中文在数据库看到的是???
 
@@ -367,7 +155,7 @@ url=jdbc:mysql://localhost:3306/lzh_db01?rewriteBatchedStatements=true&character
 
 
 
-#### 19.mysql驱动版本的问题
+### 3.mysql驱动版本的问题
 
 MySQL5
 
@@ -389,15 +177,7 @@ MySQL8
 
 
 
-#### 20.响应状态码
-
-404:请求的接口不存在
-405错误：表示资源请求的方式不对，比如后台接口是P0ST,而前端使用了GET请求，这时候就出现了405的Http错误
-400错误：表示你的请求参数不符合后台接口的要求
-
-
-
-
+# 六、Java
 
 
 
